lessions/43-cafe-shop-tea-ing/.kube/cafe-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shop.192.168.99.108.xip.io
#  annotations:
#    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: shop.192.168.99.108.xip.io
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
  tls:
  - hosts:
    - shop.192.168.99.108.xip.io
